[package]
name = "ant_upload"
version = "0.1.0"
edition = "2024"

[dependencies]
autonomi = { git = "https://github.com/grumbach/autonomi", branch = "req_resp_record_put", features = ["loud"] }
eframe = "0.24.0"
egui = "0.24.0"
image = "0.25.6"
color-eyre = "0.6.3"
dirs-next = "~2.0.0"
serde_json = "1.0.132"
sha256 = "1.6.0"
tokio = { version = "1.43.1", features = ["full"] }
